# Stock-dog

./: .clang-format  CMakeLists.txt  PieceClasses.h  README.md  api.py  basic_class  basic_class.cpp  basic_classes.cpp  basic_classes.h  gen_moves.cpp  tempCodeRunnerFile  tempCodeRunnerFile.h  testing.cpp
precomputed_info/: README.txt
src/: basic_classes.cpp  basic_classes.h  debug.cpp  debug.h  magic.cpp  magic.h  main.cpp  move.cpp  move.h  move_generation.cpp  move_generation.h  precomputed.cpp  precomputed.h
